--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -24,7 +24,7 @@ $border-radius               	: 3px;
 $white                        : #fff;
 $black                        : #000;
 
-$body-color                  	: #ebebeb;
+$body-color                  	: #EE7649;
 
 $text-color                  	: #313130;
 $caption-color                : mix($white, $text-color, 25%);
