--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -9,7 +9,7 @@
 body {
 	font-family: $base-font;
 	background-color: $body-color;
-	backround-image: url(images/logo.svg);
+	background-image: url(/images/logo.svg);
 	background-position: center;
 	background-width: 50%;
 	color: $text-color;
