--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -11,6 +11,7 @@ body {
 	background-color: $body-color;
 	background-image: url(/images/logo.svg);
 	background-position: center;
+	background-repeat: no-repeat;
 	background-width: 50%;
 	color: $text-color;
 	@include font-size(16);
