--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -12,9 +12,10 @@ body {
 	background-image: url(/images/logo.svg);
 	background-position: center;
 	background-repeat: no-repeat;
-	background-width: 50%;
+	background-size: 50%;
 	color: $text-color;
 	@include font-size(16);
+	height: 100%;
 }
 
 p {
