--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -6,7 +6,7 @@
    Typography
    ========================================================================== */
 
-body {
+html, body {
 	font-family: $base-font;
 	background-color: $body-color;
 	background-image: url(/images/logo.svg);
